# e-bot

./: .buildinfo  .gitignore  Pipfile  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: docs.yml  linter.yml  test-pr.yml  tests.yml
_sources/: index.rst.txt
_sources/abstracts/: egamefactory.rst.txt
abstracts/: egamefactory.html
data/: popelist.txt
docs/: conf.py
src/: __main__.py  ebot.py  econfig.py  eversion.py
src/abstracts/: __init__.py  egame.py  egamefactory.py  gamecog.py  guilddispatch.py
src/cogs/: angery.py  benio.py  big_nacho.py  dispatcher.py  dynamic_load.py  e_lash_game.py  gpt.py  nostalgia.py  pope.py  rowan_reactor.py  version.py  video_thanks.py  when_next.py  xtian_server.py
src/games/: ecards.py  elash.py  ridethebus.py
src/interactive/: __init__.py  buttons.py  cardsprompt.py  choice.py  gatherplayers.py  lashprompt.py  message.py  messagechoice.py  monitor.py  pipeline.py  poll.py  promptmodal.py  replies.py  selection.py  timedview.py  userunique.py
src/utils/: __init__.py  clock.py  frenchdeck.py  lookups.py  merge.py  misc.py  testbotuser.py
test/: conftest.py
test/cogs/: test_dynamic_load.py  test_pope.py
test/mocks/: __init__.py  _baseclass.py  author.py  context.py  message.py
test/utils/: test_clock.py
